syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario";
option java_package = "ru.yandex.alice.protos.data.scenario";

import "alice/megamind/protos/common/iot.proto";
import "alice/protos/data/scenario/afisha/afisha.proto";
import "alice/protos/data/scenario/centaur/main_screen.proto";
import "alice/protos/data/scenario/centaur/teasers.proto";
import "alice/protos/data/scenario/centaur/teasers/teaser_settings.proto";
import "alice/protos/data/scenario/centaur/upper_shutter.proto";
import "alice/protos/data/scenario/centaur/webview.proto";
import "alice/protos/data/scenario/dialogovo/skill.proto";
import "alice/protos/data/scenario/example/data.proto";
import "alice/protos/data/scenario/general_conversation/conversation.proto";
import "alice/protos/data/scenario/music/infinite_feed.proto";
import "alice/protos/data/scenario/music/player.proto";
import "alice/protos/data/scenario/news/news.proto";
import "alice/protos/data/scenario/onboarding/greetings.proto";
import "alice/protos/data/scenario/onboarding/proactivity_teaser.proto";
import "alice/protos/data/scenario/search/fact.proto";
import "alice/protos/data/scenario/search/richcard.proto";
import "alice/protos/data/scenario/route/route.proto";
import "alice/protos/data/scenario/photoframe/screen_saver.proto";
import "alice/protos/data/scenario/search/search_object.proto";
import "alice/protos/data/scenario/traffic/traffic.proto";
import "alice/protos/data/scenario/video/gallery.proto";
import "alice/protos/data/scenario/video_call/video_call.proto";
import "alice/protos/data/scenario/weather/weather.proto";
import "alice/protos/data/search_result/tv_search_result.proto";

import "mapreduce/yt/interface/protos/extension.proto";


message TScenarioData {
    oneof Data {
        option (NYT.variant_field_name) = "data";
        NAlice.NData.TSearchObjectData SearchObjectData = 1 [json_name = "search_object_data", (NYT.column_name) = "search_object_data"];
        NAlice.NData.TSearchFactData SearchFactData = 2 [json_name = "search_fact_data", (NYT.column_name) = "search_fact_data"];
        NAlice.NData.TExampleScenarioData ExampleScenarioData = 3 [json_name = "example_scenario_data", (NYT.column_name) = "example_scenario_data"];
        NAlice.NData.TNewsGalleryData NewsGalleryData = 4 [json_name = "news_scenario_data", (NYT.column_name) = "news_scenario_data"];
        NAlice.NData.TNewsTeaserData NewsTeaserData = 5 [json_name = "news_teaser_data", (NYT.column_name) = "news_teaser_data"];
        NAlice.NData.TWeatherDayHoursData WeatherDayHoursData = 6 [json_name = "weather_day_hours_data", (NYT.column_name) = "weather_day_hours_data"];
        NAlice.NData.TWeatherDayPartData WeatherDayPartData = 7 [json_name = "weather_day_part_data", (NYT.column_name) = "weather_day_part_data"];
        NAlice.NData.TWeatherDayData WeatherDayData = 8 [json_name = "weather_day_data", (NYT.column_name) = "weather_day_data"];
        NAlice.NData.TWeatherDaysRangeData WeatherDaysRangeData = 9 [json_name = "weather_days_range_data", (NYT.column_name) = "weather_days_range_data"];
        NAlice.NData.TCentaurMainScreenGalleryMusicCardData CentaurMainScreenGalleryMusicCardData = 10 [json_name = "centaur_main_screen_gallery_music_card_data", (NYT.column_name) = "centaur_main_screen_gallery_music_card_data"];
        NAlice.NData.TCentaurMainScreenGalleryVideoCardData CentaurMainScreenGalleryVideoCardData = 11 [json_name = "centaur_main_screen_gallery_video_card_data", (NYT.column_name) = "centaur_main_screen_gallery_video_card_data"];
        NAlice.NData.TWeatherTeaserData WeatherTeaserData = 12 [json_name = "weather_teaser_data", (NYT.column_name) = "weather_teaser_data"];
        NAlice.NData.TMusicPlayerData MusicPlayerData = 13 [json_name = "music_player_data", (NYT.column_name) = "music_player_data"];
        NAlice.NData.TCentaurMainScreenWebviewCardData CentaurMainScreenWebviewCardData = 14 [json_name = "centaur_main_screen_webview_card_data", (NYT.column_name) = "centaur_main_screen_webview_card_data"];
        NAlice.NData.NMusic.TMusicInfiniteFeedData MusicInfiniteFeedData = 15 [json_name = "music_infinite_feed_data", (NYT.column_name) = "music_infinite_feed_data"];
        NAlice.NData.TCentaurMainScreenWebviewTabData CentaurMainScreenWebviewTabData = 16 [json_name = "centaur_main_screen_webview_tab_data", (NYT.column_name) = "centaur_main_screen_webview_tab_data"];
        NAlice.NData.TCentaurTeaserChromeDefaultLayerData CentaurTeaserChromeDefaultLayerData = 17 [json_name = "centaur_teaser_chrome_default_layer_data", (NYT.column_name) = "centaur_teaser_chrome_default_layer_data"];
        NAlice.NData.TCentaurMainScreenDiscoveryTabData CentaurMainScreenDiscoveryTabData = 18 [json_name = "centaur_main_screen_discovery_tab_data", (NYT.column_name) = "centaur_main_screen_discovery_tab_data"];
        NAlice.NData.TCentaurMainScreenMusicTabData CentaurMainScreenMusicTabData = 19 [json_name = "centaur_main_screen_music_tab_data", (NYT.column_name) = "centaur_main_screen_music_tab_data"];
        NAlice.NData.TCentaurMainScreenServicesTabData CentaurMainScreenServicesTabData = 20 [json_name = "centaur_main_screen_services_tab_data", (NYT.column_name) = "centaur_main_screen_services_tab_data"];
        NAlice.TIoTUserInfo IoTUserData = 21 [json_name = "iot_user_data", (NYT.column_name) = "iot_user_data"];
        NAlice.NData.TCentaurMainScreenSmartHomeTabData CentaurMainScreenSmartHomeTabData = 22 [json_name = "centaur_main_screen_smart_home_tab_data", (NYT.column_name) = "centaur_main_screen_smart_home_tab_data"];
        NAlice.NData.TCentaurUpperShutterData CentaurUpperShutterData = 23 [json_name = "centaur_upper_shutter_data", (NYT.column_name) = "centaur_upper_shutter_data"];
        NAlice.NData.TCentaurWebviewData CentaurWebviewData = 24 [json_name = "centaur_webview_data", (NYT.column_name) = "centaur_webview_data"];
        NAlice.NData.TCentaurMainScreenMyScreenData CentaurMainScreenMyScreenData = 25 [json_name = "centaur_main_screen_my_screen_data", (NYT.column_name) = "centaur_main_screen_my_screen_data"];
        NAlice.NData.TNewsMainScreenData NewsMainScreenData = 26 [json_name = "news_main_screen_data", (NYT.column_name) = "news_main_screen_data"];
        NAlice.NData.TWeatherMainScreenData WeatherMainScreenData = 27 [json_name = "weather_main_screen_data", (NYT.column_name) = "weather_main_screen_data"];
        NAlice.NData.TDialogovoSkillCardData DialogovoSkillCardData = 28 [json_name = "dialogovo_skill_card_data", (NYT.column_name) = "dialogovo_skill_card_data"];
        NAlice.NData.TCentaurWidgetGalleryData CentaurWidgetGalleryData = 29 [json_name = "centaur_widget_gallery_data", (NYT.column_name) = "centaur_widget_gallery_data"];
        NAlice.NData.TScreenSaverData ScreenSaverData = 30 [json_name = "screen_saver_data", (NYT.column_name) = "screen_saver_data"];
        NAlice.NData.TTrafficWidgetData TrafficData = 31 [json_name = "traffic_data", (NYT.column_name) = "traffic_data"];
        NAlice.NData.TGalleryData GalleryData = 32 [json_name = "gallery_data", (NYT.column_name) = "gallery_data"];
        NAlice.NData.TConversationData ConversationData = 33 [json_name = "conversation_data", (NYT.column_name) = "conversation_data"];
        NAlice.NData.TVideoCallMainScreenData VideoCallMainScreenData = 34 [json_name = "video_call_main_screen_data", (NYT.column_name) = "video_call_main_screen_data"];
        NAlice.NData.TVideoCallContactChoosingData VideoCallContactChoosingData = 35 [json_name = "video_call_contact_choosing_data", (NYT.column_name) = "video_call_contact_choosing_data"];
        NAlice.NData.TCentaurWidgetCardItemData CentaurWidgetCardItemData = 36 [json_name = "centaur_widget_card_item_data", (NYT.column_name) = "centaur_widget_card_item_data", deprecated = true];
        NAlice.NData.TCentaurWidgetCardItem CentaurWidgetCardItem = 37 [json_name = "centaur_widget_card_item", (NYT.column_name) = "centaur_widget_card_item", deprecated = true];
        NAlice.NData.TAfishaTeaserData AfishaTeaserData = 38 [json_name = "afisha_teaser_data", (NYT.column_name) = "afisha_teaser_data"];
        NAlice.NData.TCentaurScenarioWidgetData CentaurScenarioWidgetData = 39 [json_name = "centaur_scenario_widget_data", (NYT.column_name) = "centaur_scenario_widget_data"];
        NAlice.NData.TIncomingTelegramCallData IncomingTelegramCallData = 40 [json_name = "incoming_telegram_call_data", (NYT.column_name) = "incoming_telegram_call_data"];
        NAlice.TTvSearchResultData VideoSearchResultData = 41 [json_name = "video_search_result_data", (NYT.column_name) = "video_search_result_data"];
        NAlice.NData.TSearchRichCardData SearchRichCardData = 42 [json_name = "search_rich_card_data", (NYT.column_name) = "search_rich_card_data"];
        NAlice.NData.TOutgoingTelegramCallData OutgoingTelegramCallData = 43 [json_name = "outgoing_telegram_call_data", (NYT.column_name) = "outgoing_telegram_call_data"];
        NAlice.NData.TCurrentTelegramCallData CurrentTelegramCallData = 44 [json_name = "current_telegram_call_data", (NYT.column_name) = "current_telegram_call_data"];
        NAlice.NData.TGreetingsCardData GreetingsCardData = 45 [json_name = "greetings_card_data", (NYT.column_name) = "greetings_card_data"];
        NAlice.NData.TShowRouteData ShowRouteData = 46 [json_name = "show_route_data", (NYT.column_name) = "show_route_data"];
        NAlice.NData.TDialogovoSkillTeaserData DialogovoTeaserCardData = 47 [json_name = "dialogovo_teaser_card_data", (NYT.column_name) = "dialogovo_teaser_card_data"];
        NAlice.NData.TTrafficCardData TrafficCardData = 48 [json_name = "traffic_card_data", (NYT.column_name) = "traffic_card_data"];
        NAlice.NData.TProactivityTeaserData ProactivityTeaserData = 49 [json_name = "proactivity_teaser_data", (NYT.column_name) = "proactivity_teaser_data"];
        NAlice.NData.TGreetingsFooterCardData GreetingsFooterCardData = 50 [json_name = "greetings_footer_card_data", (NYT.column_name) = "greetings_footer_card_data"];
        NAlice.NData.TTeaserSettingsWithContentData TeaserSettingsWithContentData = 51 [json_name = "teaser_settings_with_content_data", (NYT.column_name) = "teaser_settings_with_content_data"];
        NAlice.NData.TTeasersPreviewData TeasersPreviewData = 52 [json_name = "teaser_preview_data", (NYT.column_name) = "teaser_preview_data"];
    }
}
